<resources>
    <string name="app_name">MasakBanyak</string>
    <string name="app_id">com.baskom.masakbanyak</string>
    <string name="app_preferences_key">com.baskom.masakbanyak.preferences</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_transaksi">Transaction</string>

    <!-- Placeholders for empty fragments -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_transaction_fragment">Hello transaction fragment</string>
    <string name="hello_notification_fragment">Hello notification fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>

    <!-- Catering placeholders -->
    <string name="catering_image_placeholder">Catering Image</string>
    <string name="catering_name_placeholder">Catering Name</string>
    <string name="catering_email_placeholder">Catering Email</string>
    <string name="catering_address_placeholder">Catering Address</string>
    <string name="catering_phone_placeholder">Catering Phone Number</string>
    <string name="packet_name_placeholder">Packet name</string>
    <string name="packet_price_placeholder">Packet price</string>
    <string name="order_button_placeholder">Pesan</string>

    <!--Profile placeholders-->
    <string name="profile_image_placeholder">Profile Image</string>
    <string name="profile_name_placeholder">Profile Name</string>
    <string name="profile_email_placeholder">Profile Email</string>
    <string name="profile_phone_placeholder">Profile Phone Number</string>
    <string name="title_activity_transaction">TransactionActivity</string>
</resources>
