<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/catering_image"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:background="@color/custom02"
                android:gravity="center" />

            <TextView
                android:id="@+id/catering_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/catering_name_placeholder"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/catering_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/catering_email_placeholder"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/catering_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/rubik_light"
                android:gravity="center"
                android:text="@string/catering_address_placeholder"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/catering_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:text="@string/catering_phone_placeholder"
                android:textSize="17sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/packets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layoutAnimation="@anim/layout_animation_fall_down" />

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>