<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded_background">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cutCornerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.florent37.shapeofview.shapes.DiagonalView
                android:id="@+id/packet_images_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:shape_diagonal_angle="10"
                app:shape_diagonal_direction="left"
                app:shape_diagonal_position="bottom"
                android:elevation="4dp">

                <ImageView
                    android:id="@+id/packet_images"
                    android:layout_width="match_parent"
                    android:layout_height="144dp" />

            </com.github.florent37.shapeofview.shapes.DiagonalView>

            <android.support.v4.widget.Space
                android:id="@+id/margin_space"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="70dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/packet_images_shape"
                app:layout_constraintRight_toRightOf="parent" />

            <nl.dionsegijn.steppertouch.StepperTouch
                android:id="@+id/number_stepper"
                android:layout_width="99dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/margin_space"
                app:stepperBackgroundColor="@color/colorPrimary"
                app:stepperTextColor="@color/colorPrimary"
                android:elevation="5dp"
                />

            <TextView
                android:id="@+id/packet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rubik_light"
                android:text="@string/packet_name_placeholder"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/packet_images_shape" />

            <TextView
                android:id="@+id/packet_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/packet_price_placeholder"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/packet_name" />

            <LinearLayout
                android:id="@+id/packet_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/packet_price" />

            <!--address and date picker-->

            <Button
                android:id="@+id/order_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:background="@drawable/profile_buttons"
                android:fontFamily="@font/rubik_regular"
                android:text="Pilih Tanggal?"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/packet_contents" />

            <Button
                android:id="@+id/order_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_buttons"
                android:fontFamily="@font/rubik_regular"
                android:padding="8dp"
                android:text="Masukkan Alamat?"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_date" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <com.github.florent37.shapeofview.shapes.CutCornerView
        android:id="@+id/cutCornerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shape_cutCorner_topLeftSize="20dp">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:background="@drawable/order_button_background"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/order_button_placeholder"
            android:textColor="@color/white"
            android:textSize="19sp" />

    </com.github.florent37.shapeofview.shapes.CutCornerView>

</android.support.constraint.ConstraintLayout>